--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>artcom.java.develop</groupId>
-    <artifactId>vet.clinic</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <name>artcom.vet.clinic</name>
+    <groupId>artcom.java.developer</groupId>
+    <artifactId>vet.clinics</artifactId>
+    <packaging>jar</packaging>
+
+    <version>1.1-SNAPSHOT</version>
 
 
     <properties>
@@ -39,6 +42,13 @@
             <scope>system</scope>
             <systemPath>${my.JavaFxLocation}/jfxrt.jar</systemPath>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>2.3</version>
+        </dependency>
+
 
         <!--<dependency>-->
         <!--<groupId>org.springframework</groupId>-->
@@ -80,7 +90,6 @@
     </dependencies>
 
 
-
     <build>
         <outputDirectory>${output.loction}</outputDirectory>
         <testOutputDirectory>${output.loction}/test-classes</testOutputDirectory>
@@ -99,13 +108,58 @@
                 <!--</includes>-->
             </resource>
         </resources>
-        <!--<plugins>-->
-        <!--<plugin>-->
-        <!--<groupId>org.apache.maven.plugins</groupId>-->
-        <!--<artifactId>maven-pmd-plugin</artifactId>-->
-        <!--<version>2.4</version>-->
-        <!--</plugin>-->
-        <!--</plugins>-->
+        <plugins>
+
+
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.art.develop.java.clinic.ui.fx.MainWindow</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
+
+
+
+            <!--До конца не разобрался во всех настройках плагина-->
+            <!--но он создаёт в целевой директории кроме обычного джарника ещё два,-->
+            <!--один куда полностью всё кидает и второй легковестный-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-shade-plugin</artifactId>-->
+                <!--<version>2.3</version>-->
+                <!--<configuration>-->
+                    <!--<transformers>-->
+                        <!--<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+                            <!--<mainClass>com.art.develop.java.clinic.ui.fx.MainWindow</mainClass>-->
+                        <!--</transformer>-->
+                    <!--</transformers>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>shade</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+
+            <!--Плагин для валидации на наличие ворнингов-->
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-pmd-plugin</artifactId>-->
+            <!--<version>2.4</version>-->
+            <!--</plugin>-->
+        </plugins>
     </build>
 
     <reporting>
