--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,6 @@
 
 
     <properties>
-        <!--Если указать относительный например просто название папки то эта-->
-        <!--папка будет создана в корне ИДЕА проекта-->
-        <!--Можно указать и абсолютный путь-->
-        <output.loction>target</output.loction>
-
         <!--Указывает на нужную кодировку иначе материться ворнингами при сборке-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <my.JavaFxLocation>C:/Program Files/Java/jdk1.7.0_72/jre/lib/</my.JavaFxLocation>
@@ -29,6 +24,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
+            <scope>test</scope>
         </dependency>
 
         <!--Какогото ктулху сборщик мавен материться лютым ворнингом на-->
@@ -43,11 +39,7 @@
             <systemPath>${my.JavaFxLocation}/jfxrt.jar</systemPath>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <version>2.3</version>
-        </dependency>
+
 
 
         <!--<dependency>-->
@@ -91,74 +83,26 @@
 
 
     <build>
-        <outputDirectory>${output.loction}</outputDirectory>
-        <testOutputDirectory>${output.loction}/test-classes</testOutputDirectory>
 
-        <!--Указывает место куда мавен кидает джарник и свои отчёты-->
-        <!--!!!В ДЖАРНИК КОПИРУЕТСЯ ВСЁ ТОЕСТЬ РЕСУРСЫ ТАКЖЕ ЛЕЖАТ В ДЖАРНИКЕ А НЕ ТОЛЬКО В ПАПКЕ РЕСУРСОВ!!-->
-        <directory>${output.loction}</directory>
+         <plugins>
 
-        <finalName>ROOT</finalName>
-        <sourceDirectory>src/main/java</sourceDirectory>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <!--<includes>-->
-                <!--<include>**/*.properties</include>-->
-                <!--</includes>-->
-            </resource>
-        </resources>
-        <plugins>
-
-
-
+             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-surefire-plugin</artifactId>
+                 <version>2.17</version>
+             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>2.0</version>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.art.develop.java.clinic.ui.fx.MainWindow</mainClass>
-                        </manifest>
-                    </archive>
+                    <mainClass>com.art.develop.java.clinic.ui.fx.MainWindow</mainClass>
                 </configuration>
             </plugin>
 
 
 
-
-            <!--До конца не разобрался во всех настройках плагина-->
-            <!--но он создаёт в целевой директории кроме обычного джарника ещё два,-->
-            <!--один куда полностью всё кидает и второй легковестный-->
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-shade-plugin</artifactId>-->
-                <!--<version>2.3</version>-->
-                <!--<configuration>-->
-                    <!--<transformers>-->
-                        <!--<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
-                            <!--<mainClass>com.art.develop.java.clinic.ui.fx.MainWindow</mainClass>-->
-                        <!--</transformer>-->
-                    <!--</transformers>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<phase>package</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>shade</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-
-            <!--Плагин для валидации на наличие ворнингов-->
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-pmd-plugin</artifactId>-->
-            <!--<version>2.4</version>-->
-            <!--</plugin>-->
         </plugins>
     </build>
 
