--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>vet.clinics</artifactId>
     <packaging>jar</packaging>
 
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0.test</version>
 
 
     <properties>
